--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<div class="container">
 				<div class="card-white">
 					<h1>Hello, I'm Amandine !</h1>
-					<img src="images/Profile.JPG" class="img-circle" alt="Amandine Hoyez">
+					<img src="images/profile.jpg" class="img-circle" alt="Amandine Hoyez">
 					<p>I love drawing, figure skating and skiing ! Hanging out with friends in the montains is my favorite thing to do ! I am creative, curious and adventurous</p>
 				</div>
 
@@ -27,7 +27,7 @@
 						<p>Drawing has been my hobby since I was able to hold a pencil ! I also love making portraits of my friends and family !</p>
 					</div>
 
-					<img src="images/portfolio.JPG" alt="Amandine Hoyez" class="img-square" id="portfolio"> 
+					<img src="images/portfolio.jpg" alt="Amandine Hoyez" class="img-square" id="portfolio"> 
 					
 				</div>
 
@@ -37,7 +37,7 @@
 						<p>I have been figure skating for more than 10 years, and I can't live without it !</p>
 					</div>
 
-					<img src="images/patin.JPG" alt="Amandine Hoyez" class="img-square" id="patin">
+					<img src="images/patin.jpg" alt="Amandine Hoyez" class="img-square" id="patin">
 				</div>
 
 				<div class="card-white">
@@ -46,7 +46,7 @@
 						<p>I started skiing when I moved to the montains, and I can't get tired of it !</p>
 					</div>
 
-					<img src="images/ski.JPG" alt="Amandine Hoyez" class="img-square" id="ski">
+					<img src="images/ski.jpg" alt="Amandine Hoyez" class="img-square" id="ski">
 				</div>
 
 				<div class="card-white">
